--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.ask .choice {
+.roll .choice {
     font-size: 300%;
 }
 
@@ -8,7 +8,7 @@ footer {
     font-size: 60%;
 }
 
-.pool .die {
+.keep .die {
     font-size: 300%;    
 }
 
